--- a/unit1.lfm
+++ b/unit1.lfm
@@ -1,21 +1,51 @@
 object Form1: TForm1
-  Left = 779
-  Height = 300
-  Top = 299
-  Width = 400
-  ActiveControl = ToggleBox1
+  Left = 447
+  Height = 561
+  Top = 182
+  Width = 691
   Caption = 'Form1'
-  ClientHeight = 300
-  ClientWidth = 400
+  ClientHeight = 561
+  ClientWidth = 691
   OnCreate = FormCreate
   LCLVersion = '0.9.26.2'
-  object ToggleBox1: TToggleBox
-    Left = 272
-    Height = 23
-    Top = 248
-    Width = 90
-    Caption = 'ToggleBox1'
-    OnChange = ToggleBox1Change
+  object frontview: TImage
+    Left = 8
+    Height = 240
+    Top = 8
+    Width = 320
+  end
+  object sideview: TImage
+    Left = 336
+    Height = 240
+    Top = 8
+    Width = 320
+  end
+  object perspectiveview: TImage
+    Left = 336
+    Height = 240
+    Top = 256
+    Width = 320
+  end
+  object topview: TImage
+    Left = 8
+    Height = 240
+    Top = 256
+    Width = 320
+  end
+  object Button1: TButton
+    Left = 581
+    Height = 25
+    Top = 504
+    Width = 75
+    Caption = 'Button1'
+    OnClick = Button1Click
     TabOrder = 0
+  end
+  object Timer1: TTimer
+    Enabled = False
+    Interval = 10
+    OnTimer = Timer1Timer
+    left = 544
+    top = 504
   end
 end
