--- a/unit1.lfm
+++ b/unit1.lfm
@@ -1,10 +1,10 @@
 object Form1: TForm1
-  Left = 366
-  Height = 709
+  Left = 304
+  Height = 734
   Top = 0
   Width = 672
   Caption = 'Form1'
-  ClientHeight = 709
+  ClientHeight = 734
   ClientWidth = 672
   LCLVersion = '0.9.26.2'
   object frontview: TImage
@@ -45,6 +45,17 @@ object Form1: TForm1
     Caption = 'Button1'
     OnClick = Button1Click
     TabOrder = 0
+  end
+  object TrackBar1: TTrackBar
+    Left = 16
+    Height = 37
+    Top = 674
+    Width = 264
+    Max = 100
+    OnChange = TrackBar1Change
+    Position = 0
+    Ctl3D = False
+    TabOrder = 1
   end
   object Timer1: TTimer
     Enabled = False
