lots of experimental code in unit1.pas for calculating sines domains intersections and maxima added sineWaveInRegion.pas

--- a/unit1.lfm
+++ b/unit1.lfm
@@ -57,6 +57,15 @@ object Form1: TForm1
     Ctl3D = False
     TabOrder = 1
   end
+  object Button2: TButton
+    Left = 581
+    Height = 25
+    Top = 702
+    Width = 75
+    Caption = 'Button2'
+    OnClick = Button2Click
+    TabOrder = 2
+  end
   object Timer1: TTimer
     Enabled = False
     Interval = 10
