--- a/unit1.lfm
+++ b/unit1.lfm
@@ -3,7 +3,7 @@ object Form1: TForm1
   Height = 734
   Top = 0
   Width = 672
-  ActiveControl = Button1
+  ActiveControl = CheckBox1
   Caption = 'Form1'
   ClientHeight = 734
   ClientWidth = 672
@@ -57,22 +57,13 @@ object Form1: TForm1
     Position = 0
     TabOrder = 1
   end
-  object Button2: TButton
-    Left = 581
-    Height = 25
-    Top = 702
-    Width = 75
-    Caption = 'Button2'
-    OnClick = Button2Click
-    TabOrder = 2
-  end
   object CheckBox1: TCheckBox
     Left = 328
     Height = 22
     Top = 664
     Width = 95
     Caption = 'CheckBox1'
-    TabOrder = 3
+    TabOrder = 2
   end
   object CheckBox2: TCheckBox
     Left = 328
@@ -80,7 +71,7 @@ object Form1: TForm1
     Top = 680
     Width = 95
     Caption = 'CheckBox2'
-    TabOrder = 4
+    TabOrder = 3
   end
   object CheckBox3: TCheckBox
     Left = 328
@@ -88,7 +79,7 @@ object Form1: TForm1
     Top = 696
     Width = 95
     Caption = 'CheckBox3'
-    TabOrder = 5
+    TabOrder = 4
   end
   object CheckBox4: TCheckBox
     Left = 328
@@ -96,7 +87,7 @@ object Form1: TForm1
     Top = 712
     Width = 95
     Caption = 'CheckBox4'
-    TabOrder = 6
+    TabOrder = 5
   end
   object Timer1: TTimer
     Enabled = False
